# cabot

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
examples/: http_get.rs  http_get_task_spawn.rs
src/: asynctls.rs  bin.rs  client.rs  command.rs  constants.rs  dns.rs  errors.rs  executor.rs  http.rs  lib.rs  main.rs  request.rs  response.rs  results.rs
tests/: basic_data  basic_server.sh  chunk_data  chunk_server.sh  crash_sites.py  crash_sites.txt
tests/functionals/: README.md  pyproject.toml
tests/functionals/features/: environment.py  help.feature  http_customize_query.feature  http_decode_response.feature  http_outfile.feature  http_redirect.feature  http_timeout.feature
tests/functionals/features/steps/: __init__.py
tests/functionals/functionals/: __init__.py  given.py  help.py  then.py  when.py
tests/functionals/functionals/fixtures/: wsgi.py
