[package]
name = "cabot"
version = "0.4.0"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
readme = "README.md"
keywords = ["http", "https", "request", "client"]
categories = ["web-programming::http-client", "command-line-interface"]
description = """Simple HTTP Client."""
license = "BSD-3-Clause"
documentation = "https://docs.rs/crate/cabot"
#homepage = "https://github.com/mardiros/cabot"
repository = "https://github.com/mardiros/cabot"
edition = "2018"

[lib]
name = "cabot"
path = "src/lib.rs"


[[bin]]
name = "cabot"
path = "src/bin.rs"
doc = false

[features]
default = []
pretty_log = ["pretty_env_logger"]
functional_tests = []

[dependencies]

clap = "2.33.0"
log = "0.4.8"
lazy_static = "1.4.0"
regex = "1.3.1"

rustls = "0.16.0"
webpki = "0.21.0"
webpki-roots = "0.18.0"
url = "1.7.0"

async-std = {version = "1.1.0", features = ["attributes"]}
futures-core = "0.3.1"

pretty_env_logger = { version = "0.3.1", optional = true }
