[tool.poetry]
name = "functionals"
version = "0.1.0"
description = ""
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]

[tool.poetry.dependencies]
python = "^3.8"
behave-pytest = "^0.1.1"
pytest = "^2.0"  # behave-pytest requirements without freeze

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
